AnimationProject/wwwroot/css/style.css
/* ... */
.left_content {
    display: none;
}

    .left_content.active {
        display: block;
    }

.search-box {
    display: flex;
}

    .search-box input {
        flex: 1;
        padding: 3px 5px;
    }

.gallery {
    display: flex;
    flex-wrap: wrap;
    margin-top: 10px;
    min-height: 60vh;
}

.my_img_gal {
    min-height: 59.6vh;
}

.gallery img {
    width: 110px;
    height: 110px;
    object-fit: contain;
}

.pagination {
    display: flex;
    justify-content: center;
    margin-top: 24px;
}

    .pagination span {
        margin: 0 9px;
        cursor: pointer;
        font-size: 14px;
        right-listone
    }

.shapes_drop {
    text-decoration: none;
    color: var(--color-muted-grey);
}

.shapes_tabs a {
    font-size: 14px;
    text-decoration: none;
    color: black;
}

.left-panel-imput {
    flex: 1;
    padding: 5px;
    border-radius: 5px;
    border-color: #00000036;
}

.search-box,
.choose_file {
    margin-top: 15px;
}

.file_upload {
    border-radius: 5px !important;
}

.temp_gallery {
    display: flex;
    gap: 8px;
    flex-wrap: wrap;
    overflow-y: hidden;
    min-height: 59.8vh;
}

    .temp_gallery img {
        width: auto;
        height: 147px;
    }

.gallery_head {
    font-size: 18px;
    font-weight: 700;
}

.gallery_type {
    font-size: 15px;
}
/* file upload css */
.custom-file-input {
    display: flex;
    align-items: center;
    opacity: unset !important;
    border-radius: 5px;
    overflow: hidden;
    border: 2px solid #00000036 !important;
    font-family: Arial, sans-serif;
}

    .custom-file-input label {
        background-color: #e6f4ea;
        padding: 5px;
        cursor: pointer;
        font-size: 14px;
        font-weight: bold;
        color: #333;
        margin-bottom: 0 !important;
    }

    .custom-file-input span {
        flex: 1;
        padding: 5px;
        font-size: 14px;
        color: #888;
        background-color: #f9f9f9;
    }

    .custom-file-input input {
        display: none;
    }
/* background image upload */
#background_popup {
    display: none;
    width: 260px;
    background-color: #fff;
    padding: 20px;
    position: absolute;
    top: 0;
    left: 0;
}

#close_button {
    border: 0px solid #ddd;
    float: right;
    background: transparent;
    font-weight: bold;
    font-size: 15px;
    border-radius: 3px;
    padding-top: 2.3px;
}

.back_label {
    font-size: 15px;
}

.background_edit {
    font-family: "Nunito Sans", sans-serif;
    font-size: 15px;
}

.texture_img {
    width: 75px;
    height: 75px;
}

.texture_images {
    min-height: 469px;
}

.texture_palette {
    width: 30px;
    height: 30px;
    padding: 0;
    border: 2px solid #000000 !important;
    border-radius: 7px;
    overflow: hidden;
}

    .texture_palette img {
        width: 30px;
        height: 30px;
    }

#texture_box {
    display: block;
}
@media (min-width: 1900px) {
    .gallery {
        min-height: 72vh;
    }

    .temp_gallery {
        min-height: 71.8vh;
    }

    .my_img_gal {
        min-height: 71.8vh;
    }
}

